styles/index.css
/* ... */
/*
#window .page .leaderboard .file .robots {
    display: block;
    float: none;
    overflow: hidden;
    width: auto;
    clear: both;
    margin: 0 8px 2px;
    veritcal-align: top;
    border: 0 none transparent;
    overflow: hidden;
}
*/
#window .page .leaderboard .file .points,
#window .page .leaderboard .file .records {
    position: absolute;
    text-align: right;
    min-width: 260px;
    margin: 0;
    color: #F2F2F2;
    font-size: 18px;
    line-height: 18px;
}
#window .page .leaderboard .file .points {
    top: 10px;
    right: 10px;
}
#window .page .leaderboard .file .records {
    top: 34px;
    right: 10px;
    font-size: 9px;
    line-height: 9px;
    width: 400px;
    text-transform: uppercase;
    color: #DEDEDE;
}
#window .page .leaderboard .file .points .padding {
    color: #969696;
}
#window .page .leaderboard .file .points .value {
    color: #EFEFEF;
}
#window .page .menu .back {
    display: block;
    margin: 20px auto 0 0;
    color: #ABABAB;
    text-align: center;
    cursor: pointer;
    _cursor: hand;
}
#window .page .menu .back:hover {
    text-decoration: underline;
}

#window .page .leaderboard .file .robots .sprite {
    position: static;
    float: left;
    width: 16px;
    height: 16px;
    background-size: 16px 16px;
    background-color: rgba(0, 0, 0, 0.66);
    border-radius: 3px;
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
    margin: 0 1px 1px 0;
}
#window .page .leaderboard .file .robots .sprite_base_80x80 {
    background-size: 32px 32px;
    background-position: -8px -8px;
}


#window .page .leaderboard .pagelinks {
    display: block;
    margin: 0 auto;
    overflow: hidden;
    text-align: center;
    position: relative;
}
#window .page .leaderboard .pagelinks.head {
    margin-bottom: 10px;
}
#window .page .leaderboard .pagelinks.foot {
    margin-top: 10px;
}
#window .page .leaderboard .pagelinks .link {
    display: inline-block;
    margin: 0 4px 4px 0;
    padding: 3px 6px;
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
    border-radius: 3px;
    background-color: #1e1e1e;
    color: #DEDEDE;
    min-width: 20px;
    box-sizing: border-box;
    text-align: center;
    text-decoration: none;
}
#window .page .leaderboard .pagelinks .link.active,
#window .page .leaderboard .pagelinks .link:hover {
    background-color: #4e4e4e;
    text-decoration: underline;
}
#window .page .leaderboard .pagelinks .link.prev,
#window .page .leaderboard .pagelinks .link.next {
    min-width: 50px;
    font-size: 11px;
    border: 1px solid #1A1A1A;
    background-color: #222222;
    background-image: -webkit-gradient(
            linear,
            left bottom,
            left top,
            color-stop(0.15, rgba(0, 0, 0, 0.05)),
            color-stop(0.75, rgba(255, 255, 255, 0.05))
    );
    background-image: -moz-linear-gradient(
            center bottom,
            rgba(0, 0, 0, 0.05) 15%,
            rgba(255, 255, 255, 0.05) 75%
    );
    text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
    -moz-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
    -website-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
}
#window .page .leaderboard .pagelinks .link.prev {
    float: left;
}
#window .page .leaderboard .pagelinks .link.next {
    float: right;
}
#window .page .leaderboard .pagelinks .link.number,
#window .page .leaderboard .pagelinks .link.bullet {
    min-height: 22px;
    line-height: 20px;
}
#window .page .leaderboard .pagelinks .link.number {

}
#window .page .leaderboard .pagelinks .link.bullet {

}


#window .page .leaderboard .playerlinks {
    display: block;
    margin: 0 auto;
    overflow: hidden;
    text-align: center;
}



#window .page .leaderboard .subbody {

}
#window .page .leaderboard .subbody .divider {
    display: block;
    clear: both;
    background-color: transparent;
    border: 0 none transparent;
    color: transparent;
    border-bottom: 1px solid #464646;
    margin: 0 auto 10px;
}
#window .page .body .leaderboard .thread_subbody_full .avatar_userimage {
    margin-bottom: 10px !important;
}
#window .page .body .leaderboard .thread_subbody_full {
    min-height: 10px !important;
    _height: 10px !important;
}
#window .page .body .leaderboard .thread_right .bodytext {
    padding-right: 0 !important;
}
#window .page .body .leaderboard .subbody .bodytext.community_stats {
    display: block;
    float: none;
    clear: both;
    margin: 0 auto 10px;
    overflow: hidden;
    padding-top: 0;
}
#window .page .leaderboard .subbody .bodytext .player_stats {
    display: block;
    float: left;
    margin: 0 4px 4px 0;
    color: #F0F0F0;
    font-size: 10px;
    line-height: 13px;
    width: 340px;
    border: 1px solid rgb(39, 39, 39);
    background-color: rgb(36, 36, 36);
    padding: 4px 8px;
    -moz-border-radius: 6px;
    -webkit-border-radius: 6px;
    border-radius: 6px;
    box-sizing: border-box;
}
#window .page .leaderboard .subbody .player_stats .label {
    display: block;
    font-weight: bold;
    text-decoration: none;
    color: #F2F2F2;
    margin: 0 auto 2px 0;
}
#window .page .leaderboard .subbody .player_stats .records {
    display: block;
    color: #D2D2D2;
    margin: 0;
}
#window .page .leaderboard .subbody .player_stats .stat {
    display: inline-block;
    color: #B2B2B2;
    margin: 0 3px 0 0;
    padding: 0;
}
#window .page .leaderboard .subbody .player_stats .stat:after {
    content: "|";
    display: inline-block;
    color: #626262;
    margin: 0 0 0 6px;
    font-size: 8px;
    padding: 0;
}
#window .page .leaderboard .subbody .player_stats .stat:last-child:after {
    content: "";
    display: none;
}

#window .page .leaderboard .subbody .bodytext.player_links,
#window .page .leaderboard .subbody .bodytext.player_missions {
    display: block;
    margin: 0 auto 6px;
    overflow: hidden;
    clear: both;
    width: 100%;
    float: none;
}
/* ... */

